@@ -8,6 +8,7 @@ Version 6.4.13
     Result vorhanden war
   - DB-Connect mit Postgres-Datenbank unterstützt jetzt Parameter
     "searchpath" zum Setzen des Suchpfades.
+  - CString unterstrützt Ausgabe als Stream
 
 Version 6.4.12  vom 04.04.2012	(CVS-Tag: REL_6_4_12)
   - Datenbank: Strings werden nun in Hochkommata statt Anführungszeichen
